# O-NAUTILUS

./: .gitignore  README.md  ZDT2_mei_mean.html  ZDT3_mei_mean.html  ZDT3_mei_opt.html  ZDT_mei_mean.html  onautilus.csv  pyproject.toml  setup.cfg  temp-plot.html  test.py
Examples/: Crashworthiness design of vehicles.ipynb  Example.ipynb  MEI.ipynb  Tests.ipynb  ZDT1.csv  app.py  app2.py  app3.py  app4.py  data_upload.py  mei.py  splom test.ipynb
Simplified plots/: Optimistic front.ipynb
UI/: _app.py  _app2.py  app.py  config.py  index.py
UI/pages/: Unify notations  Untitled-1.json  coloring_parallel_coords.py  data_upload.py  navigator_2_fronts.py  navigator_2_fronts_old.py  navigator_2_fronts_recent.py  optimize.py  problem_formulation.py  tools.py  tools2.py  train_model.py
data/: ZDT1.csv  atest155.csv  atest155_final_gen.csv  data.csv  river_lhs.csv  river_rand.csv  veh_lhs.csv
onautilus/: onautilus.py  preferential_func_eval.py  problems.py
testUI/: app.py
