[tool.poetry]
name = "onautilus"
version = "0.1.0"
description = "Code and app for the O-NAUTILUS algorithm"
authors = ["Bhupinder Singh Saini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
desdeo-emo = "^0.1.2"
dash = "^1.7"
desdeo_emo = "^0.1.2"
Flask-Session = "^0.3.1"
pylibmc = "^1.6"

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.7"}
pylint = {version = "^2.4"}
black = {version = "^18.3-alpha.0", allows-prereleases = true}
ipython = "^7.10"
jupyter = "^1.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
